@@ -122,10 +122,23 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @RequiresPermission(BLUETOOTH_CONNECT)
     private AdapterService getServiceAndEnforceCallerUserAndConnect(
             AttributionSource source, String method) {
+        return getServiceAndEnforceCallerUserAndConnectInternal(source, method, false);
+    }
+
+    @RequiresPermission(BLUETOOTH_CONNECT)
+    private AdapterService getServiceAndEnforceCallerUserAndConnectAllowPcc(
+            AttributionSource source, String method) {
+        return getServiceAndEnforceCallerUserAndConnectInternal(source, method, true);
+    }
+
+    @RequiresPermission(BLUETOOTH_CONNECT)
+    private AdapterService getServiceAndEnforceCallerUserAndConnectInternal(
+            AttributionSource source, String method, boolean allowPccBypass) {
         var service = getService();
         if (service == null
                 || !callerIsSystemOrActiveOrManagedUser(service, TAG, method)
-                || !enforceConnectPermissionForDataDelivery(service, source, TAG, method)) {
+                || !enforceConnectPermissionForDataDelivery(
+                        service, source, TAG, method, allowPccBypass)) {
             return null;
         }
         return service;
@@ -155,7 +168,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
 
     @Override
     public List<ParcelUuid> getUuids(AttributionSource source) {
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getUuids");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getUuids");
         if (service == null) {
             return Collections.emptyList();
         }
@@ -320,7 +333,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
             return Collections.emptyList();
         }
 
-        return Arrays.asList(service.getBondedDevices());
+        return List.copyOf(service.getBondedDevices());
     }
 
     @Override
@@ -619,7 +632,8 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public List<BluetoothDevice> getActiveDevices(
             @ActiveDeviceProfile int profile, AttributionSource source) {
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getActiveDevices");
+        var method = "getActiveDevices";
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, method);
         if (service == null) {
             return Collections.emptyList();
         }
@@ -764,7 +778,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public String getRemoteName(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteName");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteName");
         if (service == null) {
             return null;
         }
@@ -775,7 +789,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public int getRemoteType(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteType");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteType");
         if (service == null) {
             return BluetoothDevice.DEVICE_TYPE_UNKNOWN;
         }
@@ -786,7 +800,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public String getRemoteAlias(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteAlias");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteAlias");
         if (service == null) {
             return null;
         }
@@ -827,7 +841,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public int getRemoteClass(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteClass");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteClass");
         if (service == null) {
             return 0;
         }
@@ -835,10 +849,12 @@ class AdapterServiceBinder extends IBluetooth.Stub {
         return service.getRemoteClass(device);
     }
 
+    // Nullable is needed because CTS enforce it
     @Override
-    public List<ParcelUuid> getRemoteUuids(BluetoothDevice device, AttributionSource source) {
+    public @Nullable List<ParcelUuid> getRemoteUuids(
+            BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteUuids");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteUuids");
         if (service == null) {
             return Collections.emptyList();
         }
@@ -1170,7 +1186,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public int getBatteryLevel(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getBatteryLevel");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getBatteryLevel");
         if (service == null) {
             return BluetoothDevice.BATTERY_LEVEL_UNKNOWN;
         }
@@ -1862,7 +1878,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
 
         service.enforceCallingOrSelfPermission(BLUETOOTH_PRIVILEGED, null);
 
-        if (!Util.arrayContains(service.getBondedDevices(), device)) {
+        if (!service.getBondedDevices().contains(device)) {
             return BluetoothStatusCodes.ERROR_DEVICE_NOT_BONDED;
         }
         service.setActiveAudioPolicy(device, policy);
@@ -1907,7 +1923,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
 
         service.enforceCallingOrSelfPermission(BLUETOOTH_PRIVILEGED, null);
 
-        if (!Util.arrayContains(service.getBondedDevices(), device)) {
+        if (!service.getBondedDevices().contains(device)) {
             return BluetoothStatusCodes.ERROR_DEVICE_NOT_BONDED;
         }
         service.setMicrophonePreferredForCalls(device, enabled);
